# osqp_tutorial

./: README.md
c_plus/matix_testing/: CMakeLists.txt
c_plus/matix_testing/src/: main.cc
c_plus/osqp/: CMakeLists.txt  README.md  main.cc
c_plus/osqp-eigen/src/: main.cc
c_plus/quad_progpp/: README.md
c_plus/quad_progpp/src/: main.cc
